Analyze code